...
        </RelativeLayout>

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/bg_listitem"
            android:focusable="true"
            android:id="@+id/content_import_link"
            android:padding="@dimen/layout_dimen_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:tint="?colorOnIconTint"
                app:srcCompat="@drawable/ic_import_export_black_24dp"
...
